interface/ogre_interface.h



typedef struct
{
    const char* renderer_s;
    const char* plugin_folder_s;
    const char* window_title;
    const char* log_name;
    int width, height, auto_window;
} engine_options;


// Root functions
DLL void release_engine();


DLL void default_engine_options(engine_options* options);


DLL void init_engine(const engine_options options);


DLL RootHandle create_root(const char* pluginFileName, const char* configFileName, const char* logFileName);


DLL RenderWindowHandle root_initialise(int auto_create_window, const char* render_window_title);


DLL RenderWindowHandle create_render_window_hwnd(const char* name, const int width, const int height, const int full_screen, unsigned long hwnd);


DLL unsigned int render_window_get_hwnd(RenderWindowHandle window_handle);


DLL void render_window_set_visible(RenderWindowHandle window_handle, int visible);


DLL void render_window_update(RenderWindowHandle window_handle, int swap_buffers);


DLL void render_window_resize(unsigned int width, unsigned int height);


DLL void render_window_moved_or_resized();


DLL int render_window_closed();


DLL int root_is_initialised();


DLL void save_config();


DLL int restore_config();


DLL int show_config_dialog();


DLL void load_ogre_plugin(const char * plugin);


DLL SceneManagerHandle create_scene_manager(const char* type_name, const char* instance_name);


DLL SceneManagerHandle get_scene_manager();


DLL SceneManagerHandle get_scene_manager_by_name(const char* scene_manager_instance_name);


DLL int render_one_frame();


DLL int render_one_frame_ex(float time_since_last_frame);


DLL int render_loop_once();


DLL void render_loop();


DLL void pump_messages();


DLL void log_message(const char* message);


// SceneManager functions
DLL void set_default_num_mipmaps(int number);


DLL void scene_manager_set_shadow_technique(const int technique);


DLL void scene_manager_log_name();


// Resource management
DLL void setup_resources(const char* resources_cfg);


DLL void add_resource_location(const char* location, const char* type, const char* group);