interface/swig/ogre.lisp


(cffi:defcfun ("create_render_window_hwnd" #.(swig-lispify "create_render_window_hwnd" 'function)) :pointer
  (name :string)
  (width :int)
  (height :int)
  (full_screen :int)
  (hwnd :unsigned-long))

(cl:export '#.(swig-lispify "create_render_window_hwnd" 'function))

(cffi:defcfun ("render_window_get_hwnd" #.(swig-lispify "render_window_get_hwnd" 'function)) :unsigned-int
  (render_window_handle :pointer))

(cl:export '#.(swig-lispify "render_window_get_hwnd" 'function))

(cffi:defcfun ("render_window_set_visible" #.(swig-lispify "render_window_set_visible" 'function)) :void
  (render_window_handle :pointer)
  (visible :int))

(cl:export '#.(swig-lispify "render_window_set_visible" 'function))

(cffi:defcfun ("render_window_update" #.(swig-lispify "render_window_update" 'function)) :void
  (render_window_handle :pointer)
  (swap_buffers :int))

(cl:export '#.(swig-lispify "render_window_update" 'function))

(cffi:defcfun ("render_window_resize" #.(swig-lispify "render_window_resize" 'function)) :void
  (render_window_handle :pointer)
  (width :unsigned-int)
  (height :unsigned-int))

(cl:export '#.(swig-lispify "render_window_resize" 'function))

(cffi:defcfun ("render_window_moved_or_resized" #.(swig-lispify "render_window_moved_or_resized" 'function)) :void
  (render_window_handle :pointer))

(cl:export '#.(swig-lispify "render_window_moved_or_resized" 'function))

(cffi:defcfun ("render_window_closed" #.(swig-lispify "render_window_closed" 'function)) :int
  (render_window_handle :pointer))

(cl:export '#.(swig-lispify "render_window_closed" 'function))

(cffi:defcfun ("setup_resources" #.(swig-lispify "setup_resources" 'function)) :void
  (resources_cfg :string))

(cl:export '#.(swig-lispify "setup_resources" 'function))

(cffi:defcfun ("add_resource_location" #.(swig-lispify "add_resource_location" 'function)) :void
  (location :string)
  (type :string)
  (group :string))

(cl:export '#.(swig-lispify "add_resource_location" 'function))

(cffi:defcfun ("initialise_all_resource_groups" #.(swig-lispify "initialise_all_resource_groups" 'function)) :void)

(cl:export '#.(swig-lispify "initialise_all_resource_groups" 'function))

(cffi:defcfun ("resource_exists" #.(swig-lispify "resource_exists" 'function)) :int
  (group :string)
  (name :string))

(cl:export '#.(swig-lispify "resource_exists" 'function))

(cffi:defcfun ("release_engine" #.(swig-lispify "release_engine" 'function)) :void)

(cl:export '#.(swig-lispify "release_engine" 'function))

(cffi:defcfun ("default_engine_options" #.(swig-lispify "default_engine_options" 'function)) :void
  (options :pointer))

(cl:export '#.(swig-lispify "default_engine_options" 'function))

(cffi:defcfun ("init_engine" #.(swig-lispify "init_engine" 'function)) :void
  (options #.(swig-lispify "engine_options" 'classname)))

(cl:export '#.(swig-lispify "init_engine" 'function))

(cffi:defcfun ("create_root" #.(swig-lispify "create_root" 'function)) :pointer
  (pluginFileName :string)
  (configFileName :string)
  (logFileName :string))

(cl:export '#.(swig-lispify "create_root" 'function))

(cffi:defcfun ("root_initialise" #.(swig-lispify "root_initialise" 'function)) :pointer
  (auto_create_window :int)
  (render_window_title :string))

(cl:export '#.(swig-lispify "root_initialise" 'function))

(cffi:defcfun ("root_is_initialised" #.(swig-lispify "root_is_initialised" 'function)) :int)

(cl:export '#.(swig-lispify "root_is_initialised" 'function))

(cffi:defcfun ("save_config" #.(swig-lispify "save_config" 'function)) :void)

(cl:export '#.(swig-lispify "save_config" 'function))

(cffi:defcfun ("restore_config" #.(swig-lispify "restore_config" 'function)) :int)

(cl:export '#.(swig-lispify "restore_config" 'function))

(cffi:defcfun ("show_config_dialog" #.(swig-lispify "show_config_dialog" 'function)) :int)

(cl:export '#.(swig-lispify "show_config_dialog" 'function))

(cffi:defcfun ("load_ogre_plugin" #.(swig-lispify "load_ogre_plugin" 'function)) :void
  (plugin :string))

(cl:export '#.(swig-lispify "load_ogre_plugin" 'function))

(cffi:defcfun ("render_one_frame" #.(swig-lispify "render_one_frame" 'function)) :int)

(cl:export '#.(swig-lispify "render_one_frame" 'function))

(cffi:defcfun ("render_one_frame_ex" #.(swig-lispify "render_one_frame_ex" 'function)) :int
  (time_since_last_frame :float))

(cl:export '#.(swig-lispify "render_one_frame_ex" 'function))

(cffi:defcfun ("render_loop_once" #.(swig-lispify "render_loop_once" 'function)) :int)

(cl:export '#.(swig-lispify "render_loop_once" 'function))

(cffi:defcfun ("render_loop" #.(swig-lispify "render_loop" 'function)) :void)

(cl:export '#.(swig-lispify "render_loop" 'function))

(cffi:defcfun ("pump_messages" #.(swig-lispify "pump_messages" 'function)) :void)

(cl:export '#.(swig-lispify "pump_messages" 'function))

(cffi:defcfun ("log_message" #.(swig-lispify "log_message" 'function)) :void
  (message :string))

(cl:export '#.(swig-lispify "log_message" 'function))

(cffi:defcfun ("set_default_num_mipmaps" #.(swig-lispify "set_default_num_mipmaps" 'function)) :void
  (number :int))

(cl:export '#.(swig-lispify "set_default_num_mipmaps" 'function))

(cffi:defcfun ("scene_manager_log_name" #.(swig-lispify "scene_manager_log_name" 'function)) :void)

(cl:export '#.(swig-lispify "scene_manager_log_name" 'function))

(cffi:defcfun ("create_scene_manager" #.(swig-lispify "create_scene_manager" 'function)) :pointer
  (type_name :string)
  (instance_name :string))

(cl:export '#.(swig-lispify "create_scene_manager" 'function))

(cffi:defcfun ("get_scene_manager" #.(swig-lispify "get_scene_manager" 'function)) :pointer)

(cl:export '#.(swig-lispify "get_scene_manager" 'function))

(cffi:defcfun ("get_scene_manager_by_name" #.(swig-lispify "get_scene_manager_by_name" 'function)) :pointer
  (scene_manager_instance_name :string))

(cl:export '#.(swig-lispify "get_scene_manager_by_name" 'function))

(cffi:defcfun ("scene_manager_set_ambient_light_rgba" #.(swig-lispify "scene_manager_set_ambient_light_rgba" 'function)) :void
  (scene_manager_handle :pointer)
  (r :float)
  (g :float)
  (b :float)
  (a :float))

(cl:export '#.(swig-lispify "scene_manager_set_ambient_light_rgba" 'function))

(cffi:defcfun ("scene_manager_set_ambient_light_rgb" #.(swig-lispify "scene_manager_set_ambient_light_rgb" 'function)) :void
  (scene_manager_handle :pointer)
  (r :float)
  (g :float)
  (b :float))

(cl:export '#.(swig-lispify "scene_manager_set_ambient_light_rgb" 'function))

(cffi:defcfun ("scene_manager_get_ambient_light" #.(swig-lispify "scene_manager_get_ambient_light" 'function)) #.(swig-lispify "coiColourValue" 'classname)
  (scene_manager_handle :pointer))

(cl:export '#.(swig-lispify "scene_manager_get_ambient_light" 'function))

(cffi:defcfun ("scene_manager_set_shadow_technique" #.(swig-lispify "scene_manager_set_shadow_technique" 'function)) :void
  (scene_manager_handle :pointer)
  (technique :int))

(cl:export '#.(swig-lispify "scene_manager_set_shadow_technique" 'function))

(cffi:defcfun ("scene_manager_get_shadow_technique" #.(swig-lispify "scene_manager_get_shadow_technique" 'function)) :void
  (scene_manager_handle :pointer)
  (technique :int))

(cl:export '#.(swig-lispify "scene_manager_get_shadow_technique" 'function))

(cffi:defcfun ("scene_manager_get_root_scene_node" #.(swig-lispify "scene_manager_get_root_scene_node" 'function)) :pointer
  (scene_manager_handle :pointer))

(cl:export '#.(swig-lispify "scene_manager_get_root_scene_node" 'function))

(cffi:defcfun ("create_child_scene_node" #.(swig-lispify "create_child_scene_node" 'function)) :pointer
  (scene_manager_handle :pointer)
  (node_name :string))

(cl:export '#.(swig-lispify "create_child_scene_node" 'function))

(cffi:defcfun ("scene_node_attach_entity" #.(swig-lispify "scene_node_attach_entity" 'function)) :void
  (scene_node_handle :pointer)
  (entity_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_attach_entity" 'function))

(cffi:defcfun ("scene_node_update" #.(swig-lispify "scene_node_update" 'function)) :void
  (scene_node_handle :pointer)
  (update_children :int)
  (parent_has_changed :int))

(cl:export '#.(swig-lispify "scene_node_update" 'function))

(cffi:defcfun ("scene_node_update_bounds" #.(swig-lispify "scene_node_update_bounds" 'function)) :void
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_update_bounds" 'function))

(cffi:defcfun ("scene_node_get_attached_entity_int" #.(swig-lispify "scene_node_get_attached_entity_int" 'function)) :pointer
  (scene_node_handle :pointer)
  (entity_index :int))

(cl:export '#.(swig-lispify "scene_node_get_attached_entity_int" 'function))

(cffi:defcfun ("scene_node_get_attached_entity" #.(swig-lispify "scene_node_get_attached_entity" 'function)) :pointer
  (scene_node_handle :pointer)
  (entity_name :string))

(cl:export '#.(swig-lispify "scene_node_get_attached_entity" 'function))

(cffi:defcfun ("scene_node_num_attached_objects" #.(swig-lispify "scene_node_num_attached_objects" 'function)) :int
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_num_attached_objects" 'function))

(cffi:defcfun ("scene_node_detach_entity_int" #.(swig-lispify "scene_node_detach_entity_int" 'function)) :void
  (scene_node_handle :pointer)
  (entity_index :int))

(cl:export '#.(swig-lispify "scene_node_detach_entity_int" 'function))

(cffi:defcfun ("scene_node_detach_entity" #.(swig-lispify "scene_node_detach_entity" 'function)) :void
  (scene_node_handle :pointer)
  (entity_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_detach_entity" 'function))

(cffi:defcfun ("scene_node_detach_entity_string" #.(swig-lispify "scene_node_detach_entity_string" 'function)) :void
  (scene_node_handle :pointer)
  (entity_name :string))

(cl:export '#.(swig-lispify "scene_node_detach_entity_string" 'function))

(cffi:defcfun ("scene_node_detach_all_objects" #.(swig-lispify "scene_node_detach_all_objects" 'function)) :void
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_detach_all_objects" 'function))

(cffi:defcfun ("scene_node_is_in_scenegraph" #.(swig-lispify "scene_node_is_in_scenegraph" 'function)) :int
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_is_in_scenegraph" 'function))

(cffi:defcfun ("scene_node_notify_root_node" #.(swig-lispify "scene_node_notify_root_node" 'function)) :void
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_notify_root_node" 'function))

(cffi:defcfun ("scene_node_show_bounding_box" #.(swig-lispify "scene_node_show_bounding_box" 'function)) :void
  (scene_node_handle :pointer)
  (show_boundingbox :int))

(cl:export '#.(swig-lispify "scene_node_show_bounding_box" 'function))

(cffi:defcfun ("scene_node_hide_bounding_box" #.(swig-lispify "scene_node_hide_bounding_box" 'function)) :void
  (scene_node_handle :pointer)
  (hide_boundingbox :int))

(cl:export '#.(swig-lispify "scene_node_hide_bounding_box" 'function))

(cffi:defcfun ("scene_node_get_show_bounding_box" #.(swig-lispify "scene_node_get_show_bounding_box" 'function)) :int
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_get_show_bounding_box" 'function))

(cffi:defcfun ("scene_node_get_parent_scene_node" #.(swig-lispify "scene_node_get_parent_scene_node" 'function)) :pointer
  (scene_node_handle :pointer))

(cl:export '#.(swig-lispify "scene_node_get_parent_scene_node" 'function))

(cffi:defcfun ("scene_node_set_visible" #.(swig-lispify "scene_node_set_visible" 'function)) :void
  (scene_node_handle :pointer)
  (visible :int))

(cl:export '#.(swig-lispify "scene_node_set_visible" 'function))

(cffi:defcfun ("scene_node_set_visible_cascade" #.(swig-lispify "scene_node_set_visible_cascade" 'function)) :void
  (scene_node_handle :pointer)
  (visible :int)
  (cascade :int))

(cl:export '#.(swig-lispify "scene_node_set_visible_cascade" 'function))
